--- a/Palindrome-Checker/main.html
+++ b/Palindrome-Checker/main.html
@@ -5,9 +5,8 @@
   </head>
   <body>
     <h1>Palindrome Checker</h1>
-    <input id="js-input" placeholder="Type your word ">
-    <button type="submit" onclick="check();">Check</button>
+    <input id="js-input" placeholder="Type your word " />
+    <button type="submit" onclick="check()">Check</button>
     <script src="index.js"></script>
   </body>
 </html>
- 
