--- a/Blurred-Background-Popup/index.html
+++ b/Blurred-Background-Popup/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blurred Background Popup</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-  
-  <div class="container">
-    <h1>Welcome to our website</h1>
-    <button class="btn">Click to join</button>
-  </div>
-  <div class="popup-container">
-    <h2>20% OFF Offer</h2>
-    <label for="email">Your email</label>
-    <input type="email" name="email" class="input" placeholder="Enter your email">
-    <button class="popup-btn">Join</button>
-    <div class="close-icon">
-      <i class="fa-solid fa-xmark fa-2x"></i>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blurred Background Popup</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Welcome to our website</h1>
+      <button class="btn">Click to join</button>
     </div>
-  </div>
-  <script src="index.js"></script>
-</body>
+    <div class="popup-container">
+      <h2>20% OFF Offer</h2>
+      <input
+        type="email"
+        name="email"
+        class="input"
+        placeholder="Enter your email"
+      />
+      <button class="popup-btn">Join</button>
+      <div class="close-icon">
+        <i class="fa-solid fa-xmark fa-2x"></i>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
