--- a/Memory-Game/index.html
+++ b/Memory-Game/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memory Game</title>
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-</head>
-<body>
-  <h3>Score: <span id="result"></span></h3>
-  <h4 id="appeding"></h4>
-  <div id="grid"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Memory Game</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <h3>Score: <span id="result"></span></h3>
 
+    <div id="grid"></div>
 
-  <div onmouseover="this.style.backgroundColor='red'">Sundarapandiyan</div>
-  
-  <script src="app.js"></script>
-</body>
+    <div
+      onmouseover="this.style.color='red'"
+      onmouseout="this.style.color='black'"
+    >
+      Sundarapandiyan
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
