--- a/Real-Time-Character-Counter/index.html
+++ b/Real-Time-Character-Counter/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real-Time Character Counter</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h2>Real-time Character Counter</h2>
-    <textarea  id="textarea" class="textarea"
-      placeholder="Please write your text here....." maxlength="50"></textarea>
-    <div class="counter-container">
-      <p>
-        Total Characters:
-        <span class="total-counter" id="total-counter"></span>
-      </p>
-      <p>
-        Remaining Characters:
-        <span class="remaining-counter" id="remaining-counter"></span>
-      </p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real-Time Character Counter</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h2>Real-time Character Counter</h2>
+      <div class="grow-wrap">
+        <textarea
+          id="textarea"
+          class="textarea"
+          placeholder="Please write your text here....."
+        ></textarea>
+      </div>
+      <div class="counter-container">
+        <p>
+          Total Characters:
+          <span class="total-counter" id="total-counter"></span>
+        </p>
+      </div>
     </div>
-  </div>
-  <script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
