Update all file

--- a/Password-Generator/index.html
+++ b/Password-Generator/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <button class="generate-btn">
+      <button id="generate-btn">
         <i class="fas fa-key"></i>
         Generate Password
       </button>
